# algo

./: Cargo.toml  README.md
combinatorial_algorithms/: Cargo.toml
combinatorial_algorithms/src/: lib.rs  permutations.rs
combinatorial_algorithms/src/permutations/: algo_heap.rs  sorted_generator.rs
examples/: circular_rotation.rs
src/: lib.rs  string_search.rs
src/string_search/: boyer_moore.rs  linear_search.rs  naive_search.rs  preprocess.rs  preprocess_l.rs  preprocess_lprime.rs  preprocess_n.rs  preprocess_z.rs
src/string_search/preprocess/: preprocess_l.rs  preprocess_lprime.rs  preprocess_n.rs  preprocess_r.rs  preprocess_z.rs
string_algorithms/: Cargo.toml
string_algorithms/examples/: boyer_moore_search_timing.rs  circular_rotation.rs  string_search_timing.rs
string_algorithms/src/: string_search.rs
string_algorithms/src/string_search/: boyer_moore.rs  linear_search.rs  naive_search.rs  preprocess.rs
string_algorithms/src/string_search/preprocess/: preprocess_lprime.rs  preprocess_n.rs  preprocess_r.rs  preprocess_z.rs
